--- a/index.html
+++ b/index.html
@@ -10,37 +10,43 @@
     <h1>All-rounder Calculator</h1>
 
     <div class="container">
-        <div class="Card meta" onclick="calculateMaths">
+        <div class="Card meta" onclick="calculateMath()">
             <h2>Maths Calculator</h2>
         </div>
-        <div class="Card bmi" onclick="calculateBmi">
+        <div class="Card bmi" onclick="calculateBmi()">
             <h2>BMI Calculator</h2>
         </div>
     </div>
 
     <div id="math">
-        <div class="display"></div>
-        <ul type="none" class="calculate">
-            <li class="button" id="AC">AC</li>
-            <li class="button" id="backspace">X</li>
-            <li class="button" id="percent">%</li>
-            <li class="button" id="divide">/</li>
-            <li class="button" id="7">7</li>
-            <li class="button" id="8">8</li>
-            <li class="button" id="9">9</li>
-            <li class="button" id="multiply">*</li>
-            <li class="button" id="4">4</li>
-            <li class="button" id="5">5</li>
-            <li class="button" id="6">6</li>
-            <li class="button" id="subtraction">-</li>
-            <li class="button" id="1">1</li>
-            <li class="button" id="2">2</li>
-            <li class="button" id="3">3</li>
-            <li class="button" id="plus">+</li>
-            <li class="button" id="0">0</li>
-            <li class="button" id="dot">.</li>
-            <li class="button merge" id="equals">=</li>
-        </ul>
+        <div class="display">
+            <input type="text" id="inputDisplay" class="input-display" placeholder="Input" disabled>
+            <!-- <input type="text" id="outputDisplay" class="output-display" placeholder="Output" disabled> -->
+        </div>
+        <div class="calculate">
+            <button onclick="clearDisplay()">C</button>
+            <button onclick="appendValue('/')">/</button>
+            <button onclick="appendValue('*')">*</button>
+            <button onclick="deleteLast()">DEL</button>
+
+            <button onclick="appendValue('7')">7</button>
+            <button onclick="appendValue('8')">8</button>
+            <button onclick="appendValue('9')">9</button>
+            <button onclick="appendValue('-')">-</button>
+
+            <button onclick="appendValue('4')">4</button>
+            <button onclick="appendValue('5')">5</button>
+            <button onclick="appendValue('6')">6</button>
+            <button onclick="appendValue('+')">+</button>
+
+            <button onclick="appendValue('1')">1</button>
+            <button onclick="appendValue('2')">2</button>
+            <button onclick="appendValue('3')">3</button>
+            <button rowspan="2" onclick="calculate()">=</button>
+
+            <button onclick="appendValue('0')">0</button>
+            <button onclick="appendValue('.')">.</button>
+        </div>
     </div>
     <div id="bmi">
         <div class=""></div>
